# S3M-WaterTwin

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/branch-protection/: main.json
.github/workflows/: branch-protection.yml  ci.yml
apps/dashboard/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/: Dockerfile  nginx.conf
dashboard/html/: app.js  index.html  style.css
data/maintenance/: maintenance_history.md
data/manuals/: hp_pump_manual.md
data/procedures/: cartridge_filter_replacement.md  membrane_cip_procedure.md  pump_isolation_procedure.md
data/tag-maps/: example-plant.json  modbus-example.json  opcua-example.json
docs/: OPEN_SOURCE_REGISTER.md  open-source-register.md  provenance.md
docs/adr/: ADR-0001-conductor-not-physics.md  ADR-0002-phased-build.md  ADR-0014-ingestion-threat-model.md
docs/architecture/: observability.md  s3m-core-contract.md
docs/demonstrations/: demo-script.md
docs/deployment/: backup-recovery.md  data-residency.md  dr-runbook.md  edge-xiid-reference.md  ingest-deployment.md  ingest-network-policy.md  (+1 more)
infrastructure/: README.md
scripts/: apply_branch_protection.sh  backup_audit_db.sh  dr_drill.sh  npm_audit_gate.py  reconcile_sbom.py  verify_audit_chain.py
security/: npm-audit-ignore.txt  pip-audit-ignore.txt  threat-model-ingestion.md
services/watertwin-api/: .gitignore  Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
services/watertwin-api/app/: __init__.py  assistant.py  audit.py  auth.py  compliance.py  condition.py  config.py  config_store.py  deployment.py  documents.py  energy.py  events.py  executive.py  facilities.py  hydraulic_client.py  licensing.py  log_buffer.py  main.py  maintenance.py  membrane.py  metering.py  model_registry.py  network_store.py  network_twin.py  observability.py  predictive_maintenance.py  recommendations.py  reports.py  resilience.py  s3m_connector.py  security.py  siem_export.py  store.py  support.py  tag_normalization.py  training.py  updates.py  water_quality.py
services/watertwin-api/app/cmms/: __init__.py  base.py  readonly.py  writeback.py
services/watertwin-api/app/configuration/: __init__.py  entities.py  models.py  router.py  service.py
services/watertwin-api/app/models/: __init__.py  base.py  cartridge_filter.py  membrane_fouling.py  pump_condition.py
services/watertwin-api/app/models/benchmarks/: __init__.py  cartridge_filter.py  membrane_fouling.py  pump_condition.py
services/watertwin-api/app/sources/: __init__.py  base.py  historian.py  modbus.py  opcua.py  synthetic.py
services/watertwin-api/tests/: conftest.py  test_analytics.py  test_app.py  test_assistant.py  test_audit.py  test_auth.py  test_calculations.py  test_condition.py  test_configuration.py  test_connector_store.py  test_customer_documents.py  test_deployment_profile.py  test_energy_resilience_executive.py  test_events.py  test_facilities.py  test_file_integrity.py  test_ingest.py  test_integration.py  test_licensing.py  test_maintenance_work_orders.py  test_metering.py  test_models.py  test_models_governance.py  test_network_twin.py  test_observability.py  test_ot_sources.py  test_plant_telemetry.py  test_predictive_maintenance.py  test_reports.py  test_route_uniqueness.py  test_security.py  test_store_feedback.py  test_support_bundle.py  test_tag_normalization.py  test_tenancy.py  test_training.py  test_updates.py  test_water_quality.py
services/watertwin-api/watertwin/: __init__.py  analytics.py  app.py  boundary.py  calculations.py  config.py  connector.py  logging_config.py  models.py  plant.py  plant_seed.py  recommendations.py  s3m_connector.py  schemas.py  store.py  telemetry.py
services/watertwin-api/watertwin/static/: index.html
services/watertwin-ingest/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
services/watertwin-ingest/app/: __init__.py  analysis.py  archives.py  audit.py  audit_client.py  auth.py  config.py  config_client.py  control_boundary.py  csv_safe.py  deployment.py  egress.py  engineering_validation.py  epanet.py  events.py  healthcheck.py  lifecycle.py  limits.py  main.py  models.py  parsers.py  proposal.py  proposals.py  provenance.py  quotas.py  reconciler.py  residency.py  retention.py  s3m_client.py  sandbox_runner.py  scanner.py  scanning.py  security.py  service.py  sod.py  staging.py  storage.py  store.py  tenancy.py  untrusted.py  (+2 more)
services/watertwin-ingest/app/parsers/: __init__.py  base.py  document.py  epanet.py  equipment.py  gis.py  historian.py  lab.py  tabular.py  tag_mapping.py
services/watertwin-ingest/app/templates/: equipment_template.csv  lab_methods_template.csv  tag_mapping_template.csv
services/watertwin-ingest/deploy/: deployment.yaml  networkpolicy.yaml  seccomp.json
services/watertwin-ingest/tests/: conftest.py  fake_s3m.py  helpers.py  test_adversarial.py  test_analysis.py  test_api.py  test_audit_client.py  test_deployment_profile.py  test_document_parser.py  test_endpoint.py  test_epanet_parser.py  test_equipment.py  test_gis.py  test_historian.py  test_historian_large.py  test_ingest_flow.py  test_lab.py  test_lifecycle.py  test_no_label_change.py  test_ot_write_forbid.py  test_rbac.py  test_reconciler.py  test_scanner_archives.py  test_smoke.py  test_storage.py  test_tabular.py  test_tag_mapping.py  test_templates.py  test_upload.py  test_worker.py
services/watertwin-ingest/tests/fixtures/: equipment_out_of_range.xlsx  equipment_valid.xlsx  lab_cp1252.csv  lab_valid_with_bad_row.csv  missing_units.inp  rejected.xlsm  small_valid.inp  tag_mapping_valid.xlsx  truncated.inp  unknown_section.inp  xxe.inp
tests/: test_api.py  test_logging_config.py  test_models.py  test_osmotic.py  test_ro.py  test_safety.py  test_train.py
watertwin/: __init__.py  calculations.py  simulation_center.py  treatment_sim_client.py
(+319 files in other folders)
