[project]
name = "watertwin-api"
version = "0.5.0"
description = "S3M-WaterTwin API service: durable store, S3M-Core connector, and recommendation engine."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
version = "0.1.0"
description = "WaterTwin API service for a reverse-osmosis desalination digital twin."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["watertwin*"]
version = "0.3.0"
description = "S3M-WaterTwin API — digital twin analytics for water pumping assets"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["watertwin*"]
[tool.setuptools]
packages = ["watertwin"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
select = ["E", "F", "I", "B", "UP"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
