[project]
name = "watertwin-api"
version = "0.1.0"
description = "S3M-WaterTwin API: Simulation Center orchestration, recommendations, and scenario reports."
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
