[project]
name = "watertwin-ingest"
version = "0.1.0"
description = "S3M-WaterTwin templated spreadsheet ingestion (equipment specs, tag mappings, lab methods)."
requires-python = ">=3.12"

# Pinned runtime dependencies. See ../../THIRD_PARTY_LICENSES.md for license records.
dependencies = [
    "pydantic==2.10.4",
    # Read-only spreadsheet reading (read_only + data_only; never executes macros).
    "openpyxl==3.1.5",
    # CSV encoding detection with an explicit documented fallback.
    "charset-normalizer==3.4.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
